cmake_minimum_required(VERSION 3.17)
project(Stage)

set(CMAKE_CXX_STANDARD 17)

# 입출력과 사칙연산
add_subdirectory(Stage1)

# 조건문
add_subdirectory(Stage2)

# 반복문
add_subdirectory(Stage3)

# 1차원 배열
add_subdirectory(Stage4)

# 함수
add_subdirectory(Stage5)

# 문자열
add_subdirectory(Stage6)

# 기본 수학 1
add_subdirectory(Stage7)

# 기본 수학 2
add_subdirectory(Stage8)

# 재귀
add_subdirectory(Stage9)