cmake_minimum_required(VERSION VERSION 3.17)
project(Stage1)

set(CMAKE_CXX_STANDARD 17)

# 1330 두 수 비교하기 / Bronze 5
add_executable(1330 1330.cpp)

# 9498 시험 성적 / Bronze 5
add_executable(9498 9498.cpp)

# 2753 윤년 / Bronze 5
add_executable(2753 2753.cpp)

# 14681 사분면 고르기 /Bronze 5
add_executable(14681 14681.cpp)