cmake_minimum_required(VERSION 3.17)
project(Stage6)

set(CMAKE_CXX_STANDARD 17)

# 11654 아스키 코드 / Bronze 5
add_executable(11654 11654.cpp)

# 11720 숫자의 합 / Bronze 4
add_executable(11720 11720.cpp)

# 10809 알파벳 찾기 / Bronze 5
add_executable(10809 10809.cpp)

# 2675 문자열 반복 / Bronze 2
add_executable(2675 2675.cpp)

# 1157 단어 공부 / Bronze 1
add_executable(1157 1157.cpp)