cmake_minimum_required(VERSION VERSION 3.17)

# 입출력과 사칙연산
project(Stage1)

set(CMAKE_CXX_STANDARD 17)

# 2557 Hello World / Bronze 5
add_executable(2557 2557.cpp)

# 10718 We love kriii / Bronze 5
add_executable(10718 10718.cpp)

# 10171 Cat / Bronze 5
add_executable(10171 10171.cpp)

# 10172 Dog / Bronze 5
add_executable(10172 10172.cpp)

# 1000 A + B / Bronze 5
add_executable(1000 1000.cpp)

# 1001 A - B / Bronze 5
add_executable(1001 1001.cpp)

# 10998 A * B / Bronze 5
add_executable(10998 10998.cpp)

# 1008 A / B / Bronze 5
add_executable(1008 1008.cpp)

# 10869 사칙연산 / Bronze 5
add_executable(10869 10869.cpp)

# 10926 ??! / Bronze 5
add_executable(10926 10926.cpp)

# 18018 1998년생인 내가 태국에서는 2541년생?! / Bronze 5
add_executable(18018 18018.cpp)

# 10430 나머지 / Bronze 5
add_executable(10430 10430.cpp)

# 2588 곱셈 / Bronze 3
add_executable(2588 2588.cpp)

#25083 새싹 / Bronze 5
add_executable(25083 25083.cpp)