cmake_minimum_required(VERSION 3.17)

# 브루스 포스
project(Stage10)

set(CMAKE_CXX_STANDARD 17)

# 2798 블랙잭 / Bronze 2
add_executable(2798 2798.cpp)

# 2231 분해합 / Bronze 2
add_executable(2231 2231.cpp)

# 7568 덩치 / Silver 5
add_executable(7568 7568.cpp)

# 1018 체스판 다시 칠하기 / Silver 4
add_executable(1018 1018.cpp)

# 1436 영화감독 숌 / Silver 5
add_executable(1436 1436.cpp)