cmake_minimum_required(VERSION 3.17)

# 반복문
project(Stage3)

set(CMAKE_CXX_STANDARD 17)

# 2739 구구단 / Bronze 5
add_executable(2739 2739.cpp)

# 10950 A + B - 3 / Bronze 5
add_executable(10950 10950.cpp)

# 8393 합 / Bronze 5
add_executable(8393 8393.cpp)

# 15552 빠른 A + B / Bronze 4
add_executable(15552 15552.cpp)

# 2741 N 찍기 / Bronze 5
add_executable(2741 2741.cpp)

# 2742 기찍 N / Bronze 4
add_executable(2742 2742.cpp)

# 11021 A + B - 7 / Bronze 5
add_executable(11021 11021.cpp)

# 11022 A + B - 8 / Bronze 5
add_executable(11022 11022.cpp)

# 2438 별 찍기 - 1 / Bronze 5
add_executable(2438 2438.cpp)

# 2439 별 찍기 - 2 / Bronze 4
add_executable(2439 2439.cpp)

# X보다 작은 수 / Bronze 5
add_executable(10871 10871.cpp)

# A + B - 5 / Bronze 5
add_executable(10952 10952.cpp)

# A + B - 4 / Bronze 5
add_executable(10951 10951.cpp)

# 더하기 사이클 / Bronze 1
add_executable(1110 1110.cpp)