cmake_minimum_required(VERSION 3.17)
project(Stage6)

set(CMAKE_CXX_STANDARD 17)

# 11654 아스키 코드 / Bronze 5
add_executable(11654 11654.cpp)

# 11720 숫자의 합 / Bronze 4
add_executable(11720 11720.cpp)

# 10809 알파벳 찾기 / Bronze 5
add_executable(10809 10809.cpp)

# 2675 문자열 반복 / Bronze 2
add_executable(2675 2675.cpp)

# 1157 단어 공부 / Bronze 1
add_executable(1157 1157.cpp)

# 1152 단어의 개수 / Bronze 2
add_executable(1152 1152.cpp)

# 2908 상수 / Bronze 2
add_executable(2908 2908.cpp)

# 5622 다이얼 / Bronze 2
add_executable(5622 5622.cpp)

# 2941 크로아티아 알파벳 / Silver 5
add_executable(2941 2941.cpp)

# 1316 그룹 단어 체커 / Silver 5
add_executable(1316 1316.cpp)