cmake_minimum_required(VERSION 3.17)

# 기본 수학 1
project(Stage7)

set(CMAKE_CXX_STANDARD 17)

# 1712 손익분기점 / Bronze 2
add_executable(1712 1712.cpp)

# 2282 벌집 / Bronze 2
add_executable(2292 2292.cpp)

# 1193 분수찾기 / Bronze 1
add_executable(1193 1193.cpp)

# 2869 달팽이는 올라가고 싶다 / Silver 5
add_executable(2869 2869.cpp)

# 10250 ACM 호텔 / Bronze 2
add_executable(10250 10250.cpp)

# 2775 부녀회장이 될테야 / Bronze 1
add_executable(2775 2775.cpp)

# 2839 설탕 배달 / Silver 4
add_executable(2839 2839.cpp)

# 10757 큰 수 A + B / Bronze 5
add_executable(10757 10757.cpp)