cmake_minimum_required(VERSION 3.17)

# 1차원 배열
project(Stage4)

set(CMAKE_CXX_STANDARD 17)

# 10818 최소, 최대 / Bronze 3
add_executable(10818 10818.cpp)

# 2562 최댓값 / Bronze 3
add_executable(2562 2562.cpp)

# 2577 숫자의 개수 / Bronze 2
add_executable(2577 2577.cpp)

# 3052 나머지 / Bronze 2
add_executable(3052 3052.cpp)

# 1546 평균 / Bronze 1
add_executable(1546 1546.cpp)

# 8958 OX 퀴즈 / Bronze 2
add_executable(8958 8958.cpp)

# 4344 평균은 넘겠지 / Bronze 1
add_executable(4344 4344.cpp)