cmake_minimum_required(VERSION 3.17)

# 기본 수학 2
project(Stage8)

set(CMAKE_CXX_STANDARD 17)

# 1978 소수 찾기 / Silver 5
add_executable(1978 1978.cpp)

# 2581 소수 / Sliver 5
add_executable(2581 2581.cpp)

# 11653 소인수분해 / Bronze 1
add_executable(11653 11653.cpp)

# 1929 소수 구하기 / Silver 3
add_executable(1929 1929.cpp)

# 4948 베르트랑 공준 / Sliver 3
add_executable(4948 4948.cpp)

# 9020 골드바흐의 추측 / Silver 2
add_executable(9020 9020.cpp)