cmake_minimum_required(VERSION 3.17)

# 재귀
project(Stage9)

set(CMAKE_CXX_STANDARD 17)

# 10872 팩토리얼 / Bronze 5
add_executable(10872 10872.cpp)

# 10870 피보나치의 수 5 / Bronze 2
add_executable(10870 10870.cpp)

# 10748 재귀함수가 뭔가요? / Silver 5
add_executable(17478 17478.cpp)

# 25501 재귀의 귀재 / Bronze 2
add_executable(25501 25501.cpp)

# 24060 알고리즘 수업 - 병합 정렬 1 / Silver 4
add_executable(24060 24060.cpp)

# 2477 별 찍기 - 10 / Gold 5
add_executable(2447 2447.cpp)

# 11729 하노이 탑 이동 순서 / Silver 1
add_executable(11729 11729.cpp)