cmake_minimum_required(VERSION 3.17)

# 정렬
project(Stage11)

set(CMAKE_CXX_STANDARD 17)

# 2750 수 정렬하기 / Bronze 2
add_executable(2750 2750.cpp)

# 2751 수 정렬하기 2 / Silver 5
add_executable(2751 2751.cpp)

# 10989 수 정렬하기 3 / Bronze 1
add_executable(10989 10989.cpp)

# 25305 커트라인 / Bronze 2
add_executable(25305 25305.cpp)