cmake_minimum_required(VERSION 3.17)

# 정렬
project(Stage11)

set(CMAKE_CXX_STANDARD 17)

# 2750 수 정렬하기 / Bronze 2
add_executable(2750 2750.cpp)

# 2751 수 정렬하기 2 / Silver 5
add_executable(2751 2751.cpp)

# 10989 수 정렬하기 3 / Bronze 1
add_executable(10989 10989.cpp)

# 25305 커트라인 / Bronze 2
add_executable(25305 25305.cpp)

# 2108 통계학 / Silver 3
add_executable(2108 2108.cpp)

# 1427 소트인사이드 / Silver 5
add_executable(1427 1427.cpp)

# 11650 좌표 정렬하기 / Silver 5
add_executable(11650 11650.cpp)

# 11651 좌표 정렬하기 2 / Silver 5
add_executable(11651 11651.cpp)

# 1181 단어 정렬 / Silver 5
add_executable(1181 1181.cpp)

# 10814 나이순 정렬 / Silver 5
add_executable(10814 10814.cpp)