cmake_minimum_required(VERSION 3.17)

# 집합과 맵
project(Stage12)

set(CMAKE_CXX_STANDARD 17)

# 10815 숫자 카드 / Silver 5
add_executable(10815 10815.cpp)

# 14425 문자열 집합 / Silver 3
add_executable(14425 14425.cpp)

# 1620 나는야 포켓몬 마스터 이다솜 / Silver 4
add_executable(1620 1620.cpp)

# 10816 숫자 카드 2 / Silver 4
add_executable(10816 10816.cpp)