cmake_minimum_required(VERSION 3.17)

# 기하
project(Stage13)

set(CMAKE_CXX_STANDARD 17)

# 1085 직사각형에서 탈출 / Bronze 3
add_executable(1085 1085.cpp)

# 3009 네 번째 점 / Bronze 3
add_executable(3009 3009.cpp)

# 4153 직각삼각형 / Bronze 3
add_executable(4153 4153.cpp)

# 2477 참외밭 / Silver 3
add_executable(2477 2477.cpp)