cmake_minimum_required(VERSION 3.17)

# 정수론 및 조합론
project(Stage14)

set(CMAKE_CXX_STANDARD 17)

# 5066 배수와 약수 / Bronze 3
add_executable(5066 5066.cpp)

# 1037 약수 / Bronze 1
add_executable(1037 1037.cpp)

# 2609 최대공약수와 최소공배수 / Bronze 1
add_executable(2609 2609.cpp)

# 1934 최소공배수 / Bronze 1
add_executable(1934 1934.cpp)