cmake_minimum_required(VERSION 3.17)

# 정수론 및 조합론
project(Stage14)

set(CMAKE_CXX_STANDARD 17)

# 5066 배수와 약수 / Bronze 3
add_executable(5066 5066.cpp)

# 1037 약수 / Bronze 1
add_executable(1037 1037.cpp)

# 2609 최대공약수와 최소공배수 / Bronze 1
add_executable(2609 2609.cpp)

# 1934 최소공배수 / Bronze 1
add_executable(1934 1934.cpp)

# 2981 검문 / Gold 4
add_executable(2981 2981.cpp)

# 3036 링 / 링 4
add_executable(3036 3036.cpp)

# 11050 이항 계수 / Bronze 1
add_executable(11050 11050.cpp)

# 11051 이항 계수 2 / Silver 3
add_executable(11051 11051.cpp)

# 1010 다리 놓기 / Silver 5
add_executable(1010 1010.cpp)

# 9375 패션왕 신혜빈 / Silver 3
add_executable(9375 9375.cpp)

# 1676 팩토리얼 0의 개수 / Silver 5
add_executable(1676 1676.cpp)

# 2004 조합 0의 개수 / Silver 2
add_executable(2004 2004.cpp)