cmake_minimum_required(VERSION 3.17)

# 백트래킹
project(Stage15)

set(CMAKE_CXX_STANDARD 17)

# 15649 N과 M(1) / Silver 3
add_executable(15649 15649.cpp)

# 15650 N과 M(2) / Silver 3
add_executable(15650 15650.cpp)

# 15651 N과 M(3) / Silver 3
add_executable(15651 15651.cpp)

# 15652 N과 M(4) / Silver 3
add_executable(15652 15652.cpp)

# 9663 N-Queen / Gold 4
add_executable(9663 9663.cpp)

# 2580 스도쿠 / Gold 4
add_executable(2580 2580.cpp)

# 14888 연산자 끼워넣기 / Silver 1
add_executable(14888 14888.cpp)

# 14889 스타트와 링크 / Silver 2
add_executable(14889 14889.cpp)