cmake_minimum_required(VERSION 3.17)

# 동적 계획법 1
project(Stage16)

# 24416 알고리즘 수업 - 피보나치 수 1 / Bronze 1
add_executable(24416 24416.cpp)

# 9184 신나는 함수 실행 / Silver 2
add_executable(9184 9184.cpp)

# 1904 01타일 / Silver 3
add_executable(1904 1904.cpp)

# 9461 파도반 수열 / Silver 3
add_executable(9461 9461.cpp)

# 1912 연속합 / Silver 2
add_executable(1912 1912.cpp)

