cmake_minimum_required(VERSION 3.17)

# 동적 계획법 1
project(Stage16)

# 24416 알고리즘 수업 - 피보나치 수 1 / Bronze 1
add_executable(24416 24416.cpp)

# 9184 신나는 함수 실행 / Silver 2
add_executable(9184 9184.cpp)

# 1904 01타일 / Silver 3
add_executable(1904 1904.cpp)

# 9461 파도반 수열 / Silver 3
add_executable(9461 9461.cpp)

# 1912 연속합 / Silver 2
add_executable(1912 1912.cpp)

# 1149 RGB 거리 / Silver 1
add_executable(1149 1149.cpp)

# 1932 정수 삼각형 / Silver 1
add_executable(1932 1932.cpp)

# 2579 계단 오르기 / Silver 3
add_executable(2579 2579.cpp)

# 1464 1로 만들기 / Silver 3
add_executable(1464 1464.cpp)

# 10844 쉬운 계단 수 / Silver 1
add_executable(10844 10844.cpp)

# 2156 포도주 시식 / Silver 1
add_executable(2156 2156.cpp)

# 11053 가장 긴 증가하는 수열 / Silver 2
add_executable(11053 11053.cpp)

# 11054 가장 긴 바이토닉 부분 수열 / Gold 4
add_executable(11054 11054.cpp)