cmake_minimum_required(VERSION 3.17)
# Stage 1000 ~ 1999
project(1000)

set(CMAKE_CXX_STANDARD 17)

add_executable(1000 1000.cpp)
add_executable(1001 1001.cpp)
add_executable(1002 1002.cpp)
add_executable(1004 1004.cpp)
add_executable(1008 1008.cpp)
add_executable(1010 1010.cpp)
add_executable(1012 1012.cpp)
add_executable(1018 1018.cpp)
add_executable(1037 1037.cpp)
add_executable(1065 1065.cpp)
add_executable(1085 1085.cpp)

add_executable(1107 1107.cpp)
add_executable(1110 1110.cpp)
add_executable(1149 1149.cpp)
add_executable(1152 1152.cpp)
add_executable(1157 1157.cpp)
add_executable(1181 1181.cpp)
add_executable(1193 1193.cpp)

add_executable(1260 1260.cpp)
add_executable(1269 1269.cpp)

add_executable(1316 1316.cpp)
add_executable(1330 1330.cpp)
add_executable(1358 1358.cpp)

add_executable(1427 1427.cpp)
add_executable(1436 1436.cpp)
add_executable(1464 1464.cpp)

add_executable(1546 1546.cpp)

add_executable(1620 1620.cpp)
add_executable(1676 1676.cpp)
add_executable(1697 1697.cpp)

add_executable(1707 1707.cpp)
add_executable(1712 1712.cpp)
add_executable(1764 1764.cpp)

add_executable(1912 1912.cpp)
add_executable(1929 1929.cpp)
add_executable(1932 1932.cpp)
add_executable(1934 1934.cpp)
add_executable(1978 1978.cpp)