cmake_minimum_required(VERSION 3.17)
# Stage 2000 ~ 2999
project(2000)

set(CMAKE_CXX_STANDARD 17)

add_executable(2004 2004.cpp)

add_executable(2108 2108.cpp)
add_executable(2156 2156.cpp)
add_executable(2178 2178.cpp)

add_executable(2231 2231.cpp)
add_executable(2292 2292.cpp)

add_executable(2438 2438.cpp)
add_executable(2447 2447.cpp)
add_executable(2475 2475.cpp)
add_executable(2477 2477.cpp)
add_executable(2480 2480.cpp)

add_executable(2525 2525.cpp)
add_executable(2557 2557.cpp)
add_executable(2562 2562.cpp)
add_executable(2565 2565.cpp)
add_executable(2577 2577.cpp)
add_executable(2579 2579.cpp)
add_executable(2580 2580.cpp)
add_executable(2581 2581.cpp)
add_executable(2587 2587.cpp)
add_executable(2588 2588.cpp)

add_executable(2609 2609.cpp)
add_executable(2675 2675.cpp)

add_executable(2739 2739.cpp)
add_executable(2741 2741.cpp)
add_executable(2742 2742.cpp)
add_executable(2750 2750.cpp)
add_executable(2751 2751.cpp)
add_executable(2753 2753.cpp)
add_executable(2775 2775.cpp)
add_executable(2798 2798.cpp)

add_executable(2839 2839.cpp)
add_executable(2869 2869.cpp)
add_executable(2884 2884.cpp)
add_executable(2908 2908.cpp)
add_executable(2920 2920.cpp)
add_executable(2941 2941.cpp)
add_executable(2981 2981.cpp)