cmake_minimum_required(VERSION 3.17)
# Stage 9000 ~ 9999
project(9000)

set(CMAKE_CXX_STANDARD 17)

add_executable(9020 9020.cpp)

add_executable(9184 9184.cpp)

add_executable(9251 9251.cpp)

add_executable(9370 9370.cpp)
add_executable(9375 9375.cpp)

add_executable(9461 9461.cpp)
add_executable(9498 9498.cpp)

add_executable(9663 9663.cpp)