cmake_minimum_required(VERSION 3.17)
# Stage 10000 ~ 10999
project(10000)

set(CMAKE_CXX_STANDARD 17)

add_executable(10026 10026.cpp)

add_executable(10171 10171.cpp)
add_executable(10172 10172.cpp)

add_executable(10250 10250.cpp)

add_executable(10430 10430.cpp)

add_executable(10718 10718.cpp)
add_executable(10757 10757.cpp)

add_executable(10809 10809.cpp)
add_executable(10814 10814.cpp)
add_executable(10815 10815.cpp)
add_executable(10816 10816.cpp)
add_executable(10818 10818.cpp)
add_executable(10844 10844.cpp)
add_executable(10869 10869.cpp)
add_executable(10870 10870.cpp)
add_executable(10871 10871.cpp)
add_executable(10872 10872.cpp)

add_executable(10926 10926.cpp)
add_executable(10950 10950.cpp)
add_executable(10951 10951.cpp)
add_executable(10952 10952.cpp)
add_executable(10989 10989.cpp)
add_executable(10998 10998.cpp)