cmake_minimum_required(VERSION 3.17)
# Stage 11000 ~ 11999
project(11000)

set(CMAKE_CXX_STANDARD 17)

add_executable(11021 11021.cpp)
add_executable(11022 11022.cpp)
add_executable(11050 11050.cpp)
add_executable(11051 11051.cpp)
add_executable(11053 11053.cpp)
add_executable(11054 11054.cpp)

add_executable(11478 11478.cpp)

add_executable(11650 11650.cpp)
add_executable(11651 11651.cpp)
add_executable(11653 11653.cpp)
add_executable(11654 11654.cpp)
add_executable(11659 11659.cpp)
add_executable(11660 11660.cpp)

add_executable(11720 11720.cpp)
add_executable(11729 11729.cpp)
