cmake_minimum_required(VERSION 3.17)
# Stage 24000 ~ 24999
project(24000)

set(CMAKE_CXX_STANDARD 17)

add_executable(24060 24060.cpp)

add_executable(24416 24416.cpp)
add_executable(24444 24444.cpp)
add_executable(24479 24479.cpp)
add_executable(24480 24480.cpp)
add_executable(24445 24445.cpp)